
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;
typedef scalar_t__ kern_return_t ;
typedef int io_iterator_t ;
typedef int io_connect_t ;


 scalar_t__ IORegistryCreateIterator (int ,int ,int ,int *) ;
 int IORegistryIteratorEnterEntry (int ) ;
 scalar_t__ KERN_SUCCESS ;
 int exit_it (int ) ;
 scalar_t__ go ;
 int kIOMasterPortDefault ;
 int kIOServicePlane ;
 int printf (char*) ;
 int pthread_create (int *,int *,void*,void*) ;
 int pthread_join (int ,int *) ;
 int start ;
 int usleep (int) ;

int main(int argc, char** argv) {
  kern_return_t err;
  io_iterator_t iter;

  err = IORegistryCreateIterator(kIOMasterPortDefault, kIOServicePlane, 0, &iter);
  if (err != KERN_SUCCESS) {
    printf("can't create reg iterator\n");
    return 0;
  }

  IORegistryIteratorEnterEntry(iter);

  pthread_t t;
  io_connect_t arg = iter;
  pthread_create(&t, ((void*)0), (void*) go, (void*) &arg);

  usleep(100000);

  start = 1;

  exit_it(iter);

  pthread_join(t, ((void*)0));

  return 0;
}
