; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39366.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39366.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kIOMasterPortDefault = common dso_local global i32 0, align 4
@kIOServicePlane = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"can't create reg iterator\0A\00", align 1
@go = common dso_local global i64 0, align 8
@start = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = load i32, i32* @kIOMasterPortDefault, align 4
  %11 = load i32, i32* @kIOServicePlane, align 4
  %12 = call i64 @IORegistryCreateIterator(i32 %10, i32 %11, i32 0, i32* %7)
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* @KERN_SUCCESS, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %31

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @IORegistryIteratorEnterEntry(i32 %19)
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* %9, align 4
  %22 = load i64, i64* @go, align 8
  %23 = inttoptr i64 %22 to i8*
  %24 = bitcast i32* %9 to i8*
  %25 = call i32 @pthread_create(i32* %8, i32* null, i8* %23, i8* %24)
  %26 = call i32 @usleep(i32 100000)
  store i32 1, i32* @start, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @exit_it(i32 %27)
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @pthread_join(i32 %29, i32* null)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %18, %16
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i64 @IORegistryCreateIterator(i32, i32, i32, i32*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @IORegistryIteratorEnterEntry(i32) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8*, i8*) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @exit_it(i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
